--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       <li><a href="#">Separated link</a></li>
     </ul>
   </div>
-  <form>
-    <input type="text"/></form>
-</body>
+  <table class="table">
+    <tr><td>sdf</td><td>sdfasdfad</td></tr>
+    </table>
+  </body>
+
 </html>
