--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>测试</title>
 <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-<link rel="stylesheet" href="test.css"> 
+<link rel="stylesheet" href="css/test.css"> 
 </head>
 <body class ="container">
 <h2>hello world!</h2>
