--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
 <head><title>测试</title>
 <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-<link rel="stylesheet" href="css/test.css"> 
+<link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body class ="container">
 <h2>hello world!</h2>
+<a class="btn btn-default" href="#" role="button">Link</a>
+<button class="btn btn-default" type="submit">Button</button>
+<input class="btn btn-default" type="button" value="Input">
+<input class="btn btn-default" type="submit" value="Submit">
   </body>
 
 </html>
