--- a/index.html
+++ b/index.html
@@ -7,13 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
     <link href="https://cdn.bootcss.com/twitter-bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/vue/2.5.21/vue.min.js"></script>
     <title>Document</title>
 </head>
-<body class ="container">
-<h2>hello world!</h2>
-<a class="btn btn-default" href="#" role="button">Link</a>
-<button class="btn btn-default" type="submit">Button</button>
-<input class="btn btn-default" type="button" value="Input">
-<input class="btn btn-default" type="submit" value="Submit">
+<body>
+<div class="container" id="app">
+    {{message}}
+</div>
+
+<script>
+    var app = new Vue({
+        el:"#app",
+        data:{
+            message:"hello world!"
+        }
+
+    })
+</script>
 </body>
 </html>
