--- a/index.html
+++ b/index.html
@@ -6,23 +6,86 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
-    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/vue/2.5.21/vue.min.js"></script>
+    <script src="name.js"></script>
     <title>Document</title>
 </head>
 <body>
+<script id = "js1"></script>
 <div class="container" id="app">
-    {{message}}
+
+    <ul class="list-group" >
+        <li class="list-group-item" v-for ="(item,index) in name" @click="change(index)" >
+
+            {{item}}
+            <div v-if="index==current">
+            <ul class="list-group" >
+                <li class="list-group-item" v-for ="(item1,index1) in data.classify"  >
+
+                    {{item1}}
+
+                </li>
+            </ul>
+            </div>
+
+        </li>
+    </ul>
 </div>
 
 <script>
-    var app = new Vue({
+    let data = "",
+    app = new Vue({
         el:"#app",
         data:{
-            message:"hello world!"
+            message:"hello world!",
+            name:text,
+            current:90,
+            data:"",
+
+
+        },
+        methods:{
+            change :function(index){
+                data = "";
+                download(text[index] + ".json");
+                this.current = index;
+                this.data = data;
+            }
+
+        },
+        watch:{
+            // current:function(newValue,oldValue){
+            //     console.log(newValue);
+            //     this.data = data;
+            // }
+
+        },
+        computed:{
+            classCur:function(){
+                for (let i = 0 ;i<20;i++){
+
+                }
+            }
+
+
         }
 
-    })
+    });
+    function download(name){
+        let xhr = new XMLHttpRequest();
+        xhr.open('GET',name,false);
+        xhr.onreadystatechange = function(){
+            if(this.readyState == 4){
+                data = JSON.parse(this.responseText);
+            }
+        }
+        xhr.send(null);
+    }
+
+
+
+
 </script>
 </body>
 </html>
