--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script id = "js1"></script>
 <div class="container" id="app">
     <div class="row">
-        <div class="col-md-3" >
+        <div class="col-xs-3" >
         <!--<ul class="list-group" >
             <li class="list-group-item" v-for ="(value , item,index) in bClass"  @click="change(index)">
 
@@ -55,7 +55,7 @@
                 </li>
             </ul>
         </div>
-        <div class="col-md-9" >
+        <div class="col-xs-9" >
             <div style="position:fixed;width:60%;height:400px;left:40%;margin:10px -10%">
                 <div class="panel panel-default" >
                     <div class="panel-heading">
