--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
                 </li>
             </ul>
         </div>
-        <div class="col-xs-9" v-if="name1">
+        <div class="col-xs-9">
             <div style="position:fixed;width:75%;height:400px;left:25%;margin:10px -10px">
-                <div class="panel panel-default" style="background-image:url(images/banner.jpg);">
-                    <div class="panel-heading">
+                <div class="panel panel-default" >
+                    <div class="panel-heading" style="min-height:40px">
                         <h3 class="panel-title">{{name1}}</h3>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" style="min-height: 680px;background-image:url(images/banner.jpg);">
                         <div v-for="(value,item) in medicine[name]">
-                            <p class="label-info">{{typeList[item]}}:</p>
-                            <p>{{value}}</p>
+                            <p style="color:#fff;width:260px" class="label-info">{{typeList[item]}}:</p>
+                            <p style="padding-left: 50px">{{value}}</p>
                         </div>
                     </div>
                 </div>
@@ -86,6 +86,7 @@
 </div>
 
 <script>
+
 let app =new Vue({
     el:"#app",
     data:{
